libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__one_line.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
X(a, b) == a = 42 /\ b = 13
================================================================================
