libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__operator_long_form_args.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
DoStuff(b, a, n, A, N, a, S) == 42
================================================================================
