libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__operator_long_form_inline_comment.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
DoStuff(
    b,
    a, \* platanos?
    n,
    
    A, N,
    a,
    S (* are great
    dont
    you think*)
) == 42
================================================================================
