libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__operator_open_arg_list_comment.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
DoStuff (*comment*)
(b, a, n, A, N, a, S) == 42
================================================================================
