libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__operator_preceding_line_comment.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
(* Y this *) DoStuff(b, a, n, A, N, a, S) == 42
================================================================================
