libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__operator_preceding_line_comment_no_args.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
(* Y this *) DoStuff == 42
================================================================================
