libtlafmt/src/ast_format/snapshots/libtlafmt__ast_format__node__tests__operator_succeeding_args_comment.snap
---
source: libtlafmt/src/ast_format/node.rs
expression: output
---
-------------------------------- MODULE Bananas --------------------------------
DoStuff(b, a, n, A, N, a, S) (* Y this *) == 42
================================================================================
